corrected js link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Game by <strong><a href="http://kushagragour.in">Kushagra Gour</strong></a> for 
   Make you placements wisely.
 </p>
 
-<script src="game2.js"></script>
+<script src="game.js"></script>
 
 <!-- google analyitcs -->
 <script type="text/javascript">
