added github link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ canvas#c_bottom{
 <br>
 <h1>DEFENDERS FROM PAST</h1>
 <p>
-Game by <strong><a href="http://kushagragour.in">Kushagra Gour</strong></a> for BYOG
+Game by <strong><a href="http://kushagragour.in">Kushagra Gour (@chinchang457)</strong></a> for BYOG
 </p>
 <h2>Instructions:</h2>
 <p>
@@ -60,6 +60,13 @@ Game by <strong><a href="http://kushagragour.in">Kushagra Gour</strong></a> for 
 <p>
   Make you placements wisely.
 </p>
+<p>
+  Play with the source at: 
+</p>
+<p>
+  <a href="https://github.com/chinchang/Defenders-From-Past">https://github.com/chinchang/Defenders-From-Past</a>
+</p>
+
 
 <script src="game.js"></script>
 
