--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
-<!-- 
-Copyright (c) 2012 Kushagra Gour (chinchang457@gmail.com), http://kushagragour.in
+<!--
+DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE 
+                    Version 2, December 2004 
 
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
-associated documentation files (the "Software"), to deal in the Software without restriction, 
-including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, 
-and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, 
-subject to the following conditions:
+ Copyright (C) 2012 Kushagra Gour <chinchang457@gmail.com> 
 
-The above copyright notice and this permission notice shall be included in all copies or substantial 
-portions of the Software.
+ Everyone is permitted to copy and distribute verbatim or modified 
+ copies of this license document, and changing it is allowed as long 
+ as the name is changed. 
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT 
-LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. 
-IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, 
-WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE 
-SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE 
+   TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION 
+
+  0. You just DO WHAT THE FUCK YOU WANT TO. 
 -->
 
 <html>
@@ -46,7 +43,6 @@ canvas#c_bottom{
 <canvas id="c_top" width="400" height="550" style=" border: 1px solid #AAA;"></canvas>
 
 </div>
-<br>
 <h1>DEFENDERS FROM PAST</h1>
 <p>
 Game by <strong><a href="http://kushagragour.in">Kushagra Gour (@chinchang457)</strong></a> for BYOG
@@ -67,6 +63,25 @@ Game by <strong><a href="http://kushagragour.in">Kushagra Gour (@chinchang457)</
   <a href="https://github.com/chinchang/Defenders-From-Past">https://github.com/chinchang/Defenders-From-Past</a>
 </p>
 
+<p>
+      - Platform<br>
+      - Canvas<br>
+      - engine<br>
+        - very much similar to flash<br>
+        - collision: rectangle based<br>
+        - mouseevents <br>
+      - Rendering<br>
+        - images<br>
+        - drawing api<br>
+      - uses localstorage for the scores<br>
+      - has debug mode<br>
+</p>
+
+<p>
+  <h3>Resources</h3>
+  http://html5games.com <br>
+  http://www.html5gamedevelopment.org <br>
+</p>
 
 <script src="game.js"></script>
 
